--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://example.com"
 title = "TurboTides"
-author = "username"
+author = "Taize Technology"
 languageCode = "en"
 DefaultContentLanguage = "en"
 enableInlineShortcodes = true
@@ -45,9 +45,7 @@ enableRobotsTXT = true
     meta_og_url = "https://tella.pages.dev"
     meta_og_image = "https://raw.githubusercontent.com/opera7133/tella/master/images/tn.png"
     meta_og_description = "A Hugo Theme for OSSProject, Companies, Organization..."
-    meta_twitter_card = "summary_large_image"
-    meta_twitter_site = "@username"
-    meta_twitter_creator = "@username"
+
 
 [menu]
 
@@ -82,7 +80,7 @@ enableRobotsTXT = true
       weight = 1
 
   [[menu.footer]]
-    name = "Github"
-    url = "https://github.com/opera7133/tella"
-    pre = "<i class='icon-github text-2xl'></i>"
+    name = "Return"
+    url = "/"
+    pre = "<i class='fas fa-home text-2xl'></i>"
       weight = 2
