框架差不多

--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,7 @@ enableRobotsTXT = true
 
   [[menu.main]]
     identifier = "blog"
-    name = "Business"
+    name = "Blogs/Case Studies"
     url = "/blog/"
     weight = 2
 
